@@ -20,6 +20,9 @@ Version 1.8.5 patchlevel 1                                 ??? ??, 2012
 Minor changes:
  * Logged messages now have events in the LOG tree. Suggested by
    Padraic. [SW]
+ * Objects belonging to destroyed players now get chowned to a
+   configurable player (probate_judge in mush.cnf) instead of
+   God. [SW]
 
 Version 1.8.5 patchlevel 0                                 Feb 12, 2012
 
